# stegmark

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
configs/: hidden_v02.yaml
docs/: StegMark-分析报告执行完成清单.md  performance-baseline-report.json  performance-baseline-report.md  实施计划.md  设计文档.md
docs/superpowers/plans/: 2026-04-07-stegmark-batch.md  2026-04-07-stegmark-config.md  2026-04-07-stegmark-v0.1.md  2026-04-07-stegmark-v0.2.md  2026-04-07-stegmark-v0.3.md  2026-04-08-stegmark-bits-mode.md  2026-04-08-stegmark-compare-mode.md  2026-04-08-stegmark-output-controls.md  2026-04-10-stegmark-batch-output-dir.md
docs/superpowers/specs/: 2026-04-07-stegmark-v0.1-design.md
scripts/: check_benchmark_gate.py  export_onnx.py  train_hidden.py
src/stegmark/: __init__.py  cli.py  config.py  exceptions.py  logging_utils.py  service.py  types.py
src/stegmark/core/: __init__.py  aigc_fingerprint.py  codec.py  engine.py  hidden.py  image_io.py  native.py  perceptual_strength.py  provenance.py  registry.py  registry_protocol.py  reversible.py  screen_resilient.py  trustmark.py  weights.py  zk_proof.py
src/stegmark/data/: __init__.py  dataset.py
src/stegmark/evaluation/: __init__.py  attacks.py  benchmark.py  forensics.py  gates.py  metrics.py  reports.py  types.py
src/stegmark/nn/: __init__.py
src/stegmark/training/: __init__.py  adversarial.py  export.py  losses.py  trainer.py
tests/: conftest.py  test_adversarial.py  test_aigc.py  test_api.py  test_batch_cli.py  test_batch_service.py  test_benchmark.py  test_benchmark_cli.py  test_benchmark_compare.py  test_benchmark_gate.py  test_benchmark_parallel.py  test_bits_cli.py  test_bits_mode.py  test_bootstrap.py  test_cli.py  test_codec.py  test_compare_cli.py  test_compare_mode.py  test_config.py  test_config_cli.py  test_edge_cases.py  test_engines.py  test_forensics.py  test_hidden_engine.py  test_hidden_nn.py  test_hidden_training.py  test_image_io.py  test_image_io_safety.py  test_logging_and_benchmark_service.py  test_output_cli.py  test_output_controls.py  test_perceptual.py  test_provenance.py  test_registry_protocol.py  test_regression.py  test_release_metadata.py  test_report_benchmark_regressions.py  test_report_cli_service_regressions.py  test_report_config_hidden_regressions.py  test_report_core_regressions.py  (+9 more)
(+7 files in other folders)
